# resume-gen

./: .gitignore  LICENSE  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/core/: database.py  main.py  models.py  schemas.py  settings.py
api/core/mail/: password_reset.html
api/core/routes/: auth.py  resume.py  user.py
api/core/services/: security.py
api/migrations/: env.py
api/migrations/versions/: 1140cc9c6335_added_nullable_true_on_users_table_.py  33481715ca29_added_upgrade_collumns.py  4c428d0372a2_added_nullable_true_on_users_table_.py  56b9179544f7_added_constraints_added_provider_column_.py  759a54ca34d7_added_tenant_collumn_for_resume_model.py  b6f4b545d2be_initial_tables.py
app/: Dockerfile  Dockerfile   package-lock.json  package.json
app/src/: middleware.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/(public)/: page.tsx
app/src/app/(public)/(auth)/forgot-password/: page.tsx
app/src/app/(public)/(auth)/login/: page.tsx
app/src/app/(public)/(auth)/reset-password/[token]/: page.tsx
app/src/app/(public)/(auth)/signup/: page.tsx
app/src/app/(public)/login/: page.tsx
app/src/app/(public)/signup/: page.tsx
app/src/app/about/: page.tsx
app/src/components/form/: form-forgot-password.tsx  form-login.tsx  form-reset-password.tsx  form-signup.tsx
app/src/components/ui/: header-dashboard.tsx  header.tsx  logo.tsx
