[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "argon2>=0.1.10",
    "fastapi-mail>=1.5.0",
    "fastapi[all,standart]>=0.116.2",
    "httpx>=0.28.1",
    "psycopg>=3.2.10",
    "psycopg-binary>=3.2.10",
    "pwdlib[argon2]>=0.2.1",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.43",
    "weasyprint>=66.0",
]
